--- a/src/component/DisplayMoves.css
+++ b/src/component/DisplayMoves.css
@@ -3,7 +3,7 @@
   justify-content: center;
   background-color: black;
   flex-direction: column;
-  margin: 45px auto;
+  margin: 1em auto;
   max-width: 1200px;
   border: 1px solid #d8f8dd;
 }
@@ -41,8 +41,8 @@ h2 {
 }
 
 .items-container img {
-  height: 75px;
-  width: 75px;
+  height: 70px;
+  width: 70px;
   margin: 5px;
   cursor: pointer;
 }
@@ -82,22 +82,13 @@ h2 {
 }
 
 @media screen and (max-width: 700px) {
-  img {
-    height: 60px;
-    width: 60px;
-    margin: 5px;
-  }
-
   .container {
     padding: 15px;
     margin: 25px auto;
   }
-}
 
-@media screen and (max-width: 550px) {
-  img {
-    height: 45px;
-    width: 45px;
-    margin: 5px;
+  .items-container img {
+    width: 50px;
+    height: 50px;
   }
 }
